--- a/CFD/bridge_main.ipynb
+++ b/CFD/bridge_main.ipynb
@@ -84,32 +84,12 @@
     "panelSpecs, hyp, steadyStateConditions_df, Inputs_PyFluent = bm.import_inputs(geometry_path, hypotheses_path, testConditions_path, Inputs_PyFluent_path)\n",
     "steadyStateConditions_dict = steadyStateConditions_df.to_dict(orient='records')\n",
     "\n",
-    "caoMeshName = 'A3_M1__V4.5NI_s_r60'\n",
-    "caoMeshCode = caoMeshName.split('__')[0]\n",
     "testConditionsCode = os.path.splitext(os.path.basename(testConditions_path))[0]\n",
     "\n",
-    "Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
-    "\n",
     "tui, solver = bm.init_solver(main_fp, '1610')\n",
-    "nb_it = 50\n",
+    "nb_it = 60\n",
     "nb_big_it = 4\n",
     "T_out_diff_convergence_control = 0.05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jg.create_radiation(tui, caoMeshCode)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Boucle AR 1 seule géométrie"
    ]
   },
   {
@@ -118,7 +98,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msh_h5_files = glob.glob(Mesh_fp + '/*.msh.h5')"
+    "# # Change conditions for new hx_flat.yd/yu.x surfaces\n",
+    "\n",
+    "# field_index_list = [2,2,2,4,4,4]\n",
+    "\n",
+    "# for i, surface_name in enumerate([\"hx_flat_yd_air.1\", \"hx_flat_yd_air.2\", \"hx_flat_yd_air.3\", \"hx_flat_yu_air.1\", \"hx_flat_yu_air.2\", \"hx_flat_yu_air.3\"]):\n",
+    "#     jg.change_bc_wall(tui, surface_name, \"conductive_temperature_field\", \"\\\"e_hx\\\"\", f\"\\\"T_field_{field_index_list[i]}\\\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boucle 1 seule géométrie"
    ]
   },
   {
@@ -132,8 +124,13 @@
     "# testConditions_path = templates_fp + '\\\\' + 'tC0.xlsx'\n",
     "# testConditionsCode = os.path.splitext(os.path.basename(testConditions_path))[0]\n",
     "\n",
-    "nb_it = 10\n",
-    "nb_big_it = 4\n",
+    "# nb_it = 10\n",
+    "# nb_big_it = 4\n",
+    "\n",
+    "caoMeshName = 'A3_M1__V4.5NI_s_r60'\n",
+    "caoMeshCode = caoMeshName.split('__')[0]\n",
+    "\n",
+    "Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
     "\n",
     "bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
    ]
@@ -144,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Boucle cas / Cas par cas AR\n",
+    "## Boucle cas / Cas par cas UNIFORM\n",
     "\n",
     "# bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'uniform')"
    ]
@@ -162,18 +159,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Boucle plusieurs géométries/maillages, cas AR\n",
+    "msh_h5_files = glob.glob(Mesh_fp + '/*.msh.h5')\n",
+    "msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r120\" not in file))]\n",
+    "msh_h5_files = [os.path.basename(file_path) for file_path in msh_h5_files]\n",
+    "msh_h5_files = sorted(msh_h5_files, key=lambda x: int(x[1:x.index('_M')]))\n",
+    "msh_h5_files = [file_name.replace(\".msh.h5\", \"\") for file_name in msh_h5_files]\n",
+    "msh_h5_files = msh_h5_files[1:4]\n",
+    "msh_h5_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MAIN\n",
     "\n",
-    "geometries_dict = pd.read_excel(templates_fp + '\\\\' + 'test-geometries.xlsx')\n",
-    "nb_geom = len(geometries_dict)\n",
+    "for i, caoMeshName in enumerate(msh_h5_files):\n",
     "\n",
-    "for geom in range(nb_geom) :\n",
+    "    caoMeshCode = caoMeshName.split('__')[0]\n",
+    "    Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
     "\n",
-    "    geom_name = geometries_dict['mesh_name_wo_ext'].iloc[geom]\n",
-    "    folder_path = bm.create_folder_paths(folder_path, geom, case_name = f'cas_{geom_name}')\n",
-    "    bm.init_mesh(tui, geometries_dict, geom)\n",
+    "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
     "\n",
-    "    bm.simu_bridge_cases(tui, solver, folder_path, hypotheses_path, panelSpecs, Inputs_PyFluent, steadyStateConditions_dict, nb_it, nb_big_it, T_out_diff_convergence_control)"
+    "    bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh_sup_list = ['A5_M1__V4.5F2014_s_wHB_r60',\n",
+    "                 'A7_M1__V4.5F2020_s_wHB_r60',\n",
+    "                 'A10_M1__V4.5F5030_s_wHB_r60',\n",
+    "                 'A11_M1__V4.5F5040_s_wHB_r60']\n",
+    "\n",
+    "for i, caoMeshName in enumerate(mesh_sup_list):\n",
+    "\n",
+    "    caoMeshCode = caoMeshName.split('__')[0]\n",
+    "    Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
+    "\n",
+    "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
+    "\n",
+    "    bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh_sup_list = ['A3_M1__V4.5NI_s_r60', 'A8_M1__V4.5F5020_s_wHB_r60']\n",
+    "\n",
+    "for i, caoMeshName in enumerate(mesh_sup_list):\n",
+    "\n",
+    "    caoMeshCode = caoMeshName.split('__')[0]\n",
+    "    Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
+    "\n",
+    "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
+    "\n",
+    "    bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
    ]
   },
   {
