--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -45,10 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# bht.view_factor_perpendicular_rectangles(componentSpecs[\"D\"], L_fin)\n",
+    "bht.view_factor_perpendicular_rectangles(0.02, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bht.view_factor_aligned_rectangles(0.02, 0.02, 0.010)"
+   ]
   },
   {
    "cell_type": "code",
