--- a/CFD/files_manage.ipynb
+++ b/CFD/files_manage.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import glob"
+    "import glob\n",
+    "import shutil"
    ]
   },
   {
@@ -68,17 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import shutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,31 +96,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Usage\n",
-    "source_folder = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\SimulationResults\\A5_M1'\n",
-    "destination_folder = r'H:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel\\CFD\\read'\n",
-    "exclusions = ['.cas.h5', '.dat.h5']"
+    "main_fp = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI'\n",
+    "Mesh_fp = os.path.join(main_fp, 'Mesh')\n",
+    "\n",
+    "msh_h5_files = glob.glob(Mesh_fp + '/*.msh.h5')\n",
+    "msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r120\" not in file))]\n",
+    "# msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r60\" not in file))]\n",
+    "\n",
+    "msh_h5_files = [os.path.basename(file_path) for file_path in msh_h5_files]\n",
+    "msh_h5_files = sorted(msh_h5_files, key=lambda x: int(x[1:x.index('_M')]))\n",
+    "msh_h5_files = [file_name.replace(\".msh.h5\", \"\") for file_name in msh_h5_files]\n",
+    "msh_h5_files = [msh_h5_files[2]] + msh_h5_files[3:7] + msh_h5_files[0:2]\n",
+    "# msh_h5_files.append('A10_M1__V4.5F5030_s_wHB_r60')\n",
+    "msh_h5_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "copy_folder_with_exclusions(source_folder, destination_folder, exclusions)"
+    "# Usage\n",
+    "\n",
+    "for i, caoMeshName in enumerate(msh_h5_files):\n",
+    "\n",
+    "    caoMeshCode = caoMeshName.split('__')[0]\n",
+    "\n",
+    "    source_folder = os.path.join(r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\SimulationResults', str(caoMeshCode))\n",
+    "    destination_folder = os.path.join(r'H:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel\\CFD\\Fluent_GMI\\SimulationResults', str(caoMeshCode))\n",
+    "    exclusions = ['.cas.h5', '.dat.h5']\n",
+    "\n",
+    "    copy_folder_with_exclusions(source_folder, destination_folder, exclusions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
