--- a/CFD/bridge_main.ipynb
+++ b/CFD/bridge_main.ipynb
@@ -15,6 +15,8 @@
     "from datetime import datetime\n",
     "from io import StringIO\n",
     "\n",
+    "from pathlib import Path\n",
+    "\n",
     "import glob\n",
     "\n",
     "import numpy as np\n",
@@ -37,12 +39,17 @@
     "from matplotlib.cm import get_cmap\n",
     "import time\n",
     "\n",
+    "import copy\n",
+    "\n",
+    "from CoolProp.CoolProp import PropsSI\n",
     "\n",
     "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
     "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
+    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\RD-systems-and-test-benches')\n",
+    "import utils.data_processing as dp\n",
+    "\n",
     "# sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-thermal-performance-model')\n",
     "# sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-PL-model\\ansys')\n",
-    "\n",
     "\n",
     "import jou_gen as jg\n",
     "import ansys_py_bridge as apb\n",
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +85,7 @@
     "templates_fp = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\Templates'\n",
     "geometry_path = templates_fp + '\\\\' + 'Inputs_TEST_V4.5_GG.xlsx'\n",
     "hypotheses_path = templates_fp + '\\\\' + 'Model_hypotheses.xlsx'\n",
-    "testConditions_path = templates_fp + '\\\\' + 'tC0.xlsx'\n",
+    "testConditions_path = templates_fp + '\\\\' + 'tCwind.xlsx'\n",
     "Inputs_PyFluent_path = templates_fp + '\\\\' + 'Inputs_PyFluent.xlsx'\n",
     "\n",
     "panelSpecs, hyp, steadyStateConditions_df, Inputs_PyFluent = bm.import_inputs(geometry_path, hypotheses_path, testConditions_path, Inputs_PyFluent_path)\n",
@@ -89,7 +96,7 @@
     "tui, solver = bm.init_solver(main_fp, '1610')\n",
     "nb_it = 60\n",
     "nb_big_it = 4\n",
-    "T_out_diff_convergence_control = 0.05"
+    "T_out_diff_convergence_control = 0.04"
    ]
   },
   {
@@ -98,19 +105,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Change conditions for new hx_flat.yd/yu.x surfaces\n",
+    "## Change to wind case\n",
     "\n",
-    "# field_index_list = [2,2,2,4,4,4]\n",
+    "jg.change_bc_type(tui, 'cd_fc', 'pressure-outlet')\n",
+    "jg.change_bc_type(tui, 'cd2_horizontal_zd', 'pressure-outlet')\n",
+    "jg.change_bc_type(tui, 'cd2_wind', 'velocity-inlet')\n",
     "\n",
-    "# for i, surface_name in enumerate([\"hx_flat_yd_air.1\", \"hx_flat_yd_air.2\", \"hx_flat_yd_air.3\", \"hx_flat_yu_air.1\", \"hx_flat_yu_air.2\", \"hx_flat_yu_air.3\"]):\n",
-    "#     jg.change_bc_wall(tui, surface_name, \"conductive_temperature_field\", \"\\\"e_hx\\\"\", f\"\\\"T_field_{field_index_list[i]}\\\"\")"
+    "cd2_wind = solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].get_state()\n",
+    "cd2_wind['t']['constant'] = \"T_amb\"\n",
+    "solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].set_state(cd2_wind)\n",
+    "\n",
+    "cd_fc = solver.setup.boundary_conditions.pressure_outlet['cd_fc'].get_state()\n",
+    "cd_fc['avg_press_spec'] = True\n",
+    "solver.setup.boundary_conditions.pressure_outlet['cd_fc'].set_state(cd_fc)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Boucle 1 seule géométrie"
+    "### 1 seule géométrie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 1 géométrie\n",
+    "\n",
+    "# caoMeshName = 'A5_M1__V4.5F2014_s_wHB_r60'\n",
+    "caoMeshName = 'A8_M1__V4.5F5020_s_wHB_r60'\n",
+    "caoMeshCode = caoMeshName.split('__')[0]\n",
+    "\n",
+    "hyp['fins_CFD'] = 1.\n",
+    "Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
+    "\n",
+    "# bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
+    "\n",
+    "if (hyp['fins_CFD'] == 1.) or (hyp['fins_CFD'] == \"1\"):\n",
+    "    bm.adapt_for_fins(tui)"
    ]
   },
   {
@@ -120,17 +164,6 @@
    "outputs": [],
    "source": [
     "## Boucle cas / Cas par cas AR\n",
-    "\n",
-    "# testConditions_path = templates_fp + '\\\\' + 'tC0.xlsx'\n",
-    "# testConditionsCode = os.path.splitext(os.path.basename(testConditions_path))[0]\n",
-    "\n",
-    "# nb_it = 10\n",
-    "# nb_big_it = 4\n",
-    "\n",
-    "caoMeshName = 'A3_M1__V4.5NI_s_r60'\n",
-    "caoMeshCode = caoMeshName.split('__')[0]\n",
-    "\n",
-    "Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
     "\n",
     "bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
    ]
@@ -150,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Boucle AR plusieurs géométries/maillages"
+    "### AR plusieurs géométries/maillages"
    ]
   },
   {
@@ -160,11 +193,14 @@
    "outputs": [],
    "source": [
     "msh_h5_files = glob.glob(Mesh_fp + '/*.msh.h5')\n",
-    "msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r120\" not in file))]\n",
+    "# msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r120\" not in file))]\n",
+    "msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r60\" not in file))]\n",
+    "\n",
     "msh_h5_files = [os.path.basename(file_path) for file_path in msh_h5_files]\n",
     "msh_h5_files = sorted(msh_h5_files, key=lambda x: int(x[1:x.index('_M')]))\n",
     "msh_h5_files = [file_name.replace(\".msh.h5\", \"\") for file_name in msh_h5_files]\n",
-    "msh_h5_files = msh_h5_files[1:4]\n",
+    "# msh_h5_files = [msh_h5_files[2]] + msh_h5_files[3:7] + msh_h5_files[0:2]\n",
+    "# msh_h5_files.append('A10_M1__V4.5F5030_s_wHB_r60')\n",
     "msh_h5_files"
    ]
   },
@@ -174,14 +210,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAIN\n",
-    "\n",
+    "msh_h5_files = [\n",
+    "                 'A5_M1__V4.5F2014_s_wHB_r60',\n",
+    "                 'A7_M1__V4.5F2020_s_wHB_r60',\n",
+    "                ]\n",
+    "msh_h5_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyp['fins_CFD'] = 1.\n",
+    "# bm.adapt_for_fins(tui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i, caoMeshName in enumerate(msh_h5_files):\n",
     "\n",
     "    caoMeshCode = caoMeshName.split('__')[0]\n",
-    "    Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
     "\n",
     "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
+    "\n",
+    "    hyp['fins_CFD'] = 1.\n",
+    "\n",
+    "    # if caoMeshCode in ['A3_M1', 'A4_M1']:\n",
+    "    #     hyp['fins_CFD'] = 0.\n",
+    "    # else:\n",
+    "    #     hyp['fins_CFD'] = 1.\n",
+    "    #     bm.adapt_for_fins(tui)\n",
+    "\n",
+    "    Inputs = (caoMeshCode, testConditionsCode, copy.deepcopy(panelSpecs), copy.deepcopy(hyp), copy.deepcopy(steadyStateConditions_dict), copy.deepcopy(Inputs_PyFluent))\n",
     "\n",
     "    bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
    ]
@@ -192,37 +258,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh_sup_list = ['A5_M1__V4.5F2014_s_wHB_r60',\n",
-    "                 'A7_M1__V4.5F2020_s_wHB_r60',\n",
-    "                 'A10_M1__V4.5F5030_s_wHB_r60',\n",
-    "                 'A11_M1__V4.5F5040_s_wHB_r60']\n",
-    "\n",
-    "for i, caoMeshName in enumerate(mesh_sup_list):\n",
-    "\n",
-    "    caoMeshCode = caoMeshName.split('__')[0]\n",
-    "    Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
-    "\n",
-    "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
-    "\n",
-    "    bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mesh_sup_list = ['A3_M1__V4.5NI_s_r60', 'A8_M1__V4.5F5020_s_wHB_r60']\n",
-    "\n",
-    "for i, caoMeshName in enumerate(mesh_sup_list):\n",
-    "\n",
-    "    caoMeshCode = caoMeshName.split('__')[0]\n",
-    "    Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
-    "\n",
-    "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
-    "\n",
-    "    bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
+    "mesh_h5_files = [\n",
+    "                #  'A5_M1__V4.5F2014_s_wHB_r60', # ok\n",
+    "                #  'A7_M1__V4.5F2020_s_wHB_r60', # ok\n",
+    "                #  'A10_M1__V4.5F5030_s_wHB_r60',\n",
+    "                # 'A11_M1__V4.5F5040_s_wHB_r60',\n",
+    "                'A8_M1__V4.5F5020_s_wHB_r60',\n",
+    "                'A4_M1__V4.5NI_s_wHB_r60',\n",
+    "                 ]"
    ]
   },
   {
