--- a/CFD/bridge_main.ipynb
+++ b/CFD/bridge_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,11 @@
     "\n",
     "from CoolProp.CoolProp import PropsSI\n",
     "\n",
-    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
-    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
-    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\RD-systems-and-test-benches')\n",
+    "current_dir = os.getcwd()\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_dir, '..', '..', 'PVT-thermal-performance-model')))\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_dir, '..', '..', 'RD-systems-and-test-benches')))\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_dir, '..', '..', 'parallel-flow-distribution-pressure-loss')))\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_dir, '..', '..', 'parallel-flow-distribution-pressure-loss', 'ansys')))\n",
     "import utils.data_processing as dp\n",
     "\n",
     "# sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-thermal-performance-model')\n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
     "templates_fp = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\Templates'\n",
     "geometry_path = templates_fp + '\\\\' + 'Inputs_TEST_V4.5_GG.xlsx'\n",
     "hypotheses_path = templates_fp + '\\\\' + 'Model_hypotheses.xlsx'\n",
-    "testConditions_path = templates_fp + '\\\\' + 'tCwind.xlsx'\n",
+    "testConditions_path = templates_fp + '\\\\' + 'tCwind_1-2.xlsx'\n",
     "Inputs_PyFluent_path = templates_fp + '\\\\' + 'Inputs_PyFluent.xlsx'\n",
     "\n",
     "panelSpecs, hyp, steadyStateConditions_df, Inputs_PyFluent = bm.import_inputs(geometry_path, hypotheses_path, testConditions_path, Inputs_PyFluent_path)\n",
@@ -95,29 +97,50 @@
     "\n",
     "tui, solver = bm.init_solver(main_fp, '1610')\n",
     "nb_it = 60\n",
-    "nb_big_it = 4\n",
+    "nb_big_it = 5\n",
     "T_out_diff_convergence_control = 0.04"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Change to wind case\n",
+    "# ## Change to wind case\n",
     "\n",
-    "jg.change_bc_type(tui, 'cd_fc', 'pressure-outlet')\n",
-    "jg.change_bc_type(tui, 'cd2_horizontal_zd', 'pressure-outlet')\n",
-    "jg.change_bc_type(tui, 'cd2_wind', 'velocity-inlet')\n",
+    "# jg.change_bc_type(tui, 'cd_fc', 'pressure-outlet')\n",
+    "# jg.change_bc_type(tui, 'cd2_horizontal_zd', 'pressure-outlet')\n",
+    "# jg.change_bc_type(tui, 'cd2_wind', 'velocity-inlet')\n",
     "\n",
-    "cd2_wind = solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].get_state()\n",
-    "cd2_wind['t']['constant'] = \"T_amb\"\n",
-    "solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].set_state(cd2_wind)\n",
+    "# cd2_wind = solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].get_state()\n",
+    "# cd2_wind['t']['constant'] = \"T_amb\"\n",
+    "# solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].set_state(cd2_wind)\n",
     "\n",
-    "cd_fc = solver.setup.boundary_conditions.pressure_outlet['cd_fc'].get_state()\n",
-    "cd_fc['avg_press_spec'] = True\n",
-    "solver.setup.boundary_conditions.pressure_outlet['cd_fc'].set_state(cd_fc)"
+    "# cd_fc = solver.setup.boundary_conditions.pressure_outlet['cd_fc'].get_state()\n",
+    "# cd_fc['avg_press_spec'] = True\n",
+    "# solver.setup.boundary_conditions.pressure_outlet['cd_fc'].set_state(cd_fc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ### Change to free convection case\n",
+    "\n",
+    "# jg.change_bc_type(tui, 'cd_fc', 'pressure-inlet')\n",
+    "# jg.change_bc_type(tui, 'cd2_horizontal_zd', 'pressure-inlet')\n",
+    "# jg.change_bc_type(tui, 'cd2_wind', 'pressure-outlet')\n",
+    "\n",
+    "# cd2_wind = solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].get_state()\n",
+    "# cd2_wind['t']['constant'] = \"T_amb\"\n",
+    "# solver.setup.boundary_conditions.velocity_inlet['cd2_wind'].set_state(cd2_wind)\n",
+    "\n",
+    "# cd_fc = solver.setup.boundary_conditions.pressure_outlet['cd_fc'].get_state()\n",
+    "# cd_fc['avg_press_spec'] = True\n",
+    "# solver.setup.boundary_conditions.pressure_outlet['cd_fc'].set_state(cd_fc)"
    ]
   },
   {
@@ -129,14 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "### 1 géométrie\n",
     "\n",
     "# caoMeshName = 'A5_M1__V4.5F2014_s_wHB_r60'\n",
-    "caoMeshName = 'A8_M1__V4.5F5020_s_wHB_r60'\n",
+    "# caoMeshName = 'A8_M1__V4.5F5020_s_wHB_r60'\n",
+    "caoMeshName = 'A10_M2__240926_A10_MESH_GMI'\n",
     "caoMeshCode = caoMeshName.split('__')[0]\n",
     "\n",
     "hyp['fins_CFD'] = 1.\n",
@@ -147,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
     "\n",
-    "if (hyp['fins_CFD'] == 1.) or (hyp['fins_CFD'] == \"1\"):\n",
-    "    bm.adapt_for_fins(tui)"
+    "# if (hyp['fins_CFD'] == 1.) or (hyp['fins_CFD'] == \"1\"):\n",
+    "#     bm.adapt_for_fins(tui)"
    ]
   },
   {
@@ -194,13 +218,34 @@
    "source": [
     "msh_h5_files = glob.glob(Mesh_fp + '/*.msh.h5')\n",
     "# msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r120\" not in file))]\n",
-    "msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r60\" not in file))]\n",
+    "# msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file) & (\"_r60\" not in file))]\n",
+    "msh_h5_files = [file for file in msh_h5_files if ((\"M1\" in file) & (\"oldM\" not in file) & (\"plus_TEST\" not in file))]\n",
     "\n",
     "msh_h5_files = [os.path.basename(file_path) for file_path in msh_h5_files]\n",
     "msh_h5_files = sorted(msh_h5_files, key=lambda x: int(x[1:x.index('_M')]))\n",
     "msh_h5_files = [file_name.replace(\".msh.h5\", \"\") for file_name in msh_h5_files]\n",
     "# msh_h5_files = [msh_h5_files[2]] + msh_h5_files[3:7] + msh_h5_files[0:2]\n",
     "# msh_h5_files.append('A10_M1__V4.5F5030_s_wHB_r60')\n",
+    "msh_h5_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msh_h5_files = ['A5_M1__V4.5F2014_s_wHB_r60',\n",
+    "                'A6_M1__V4.5F2014_s_wHB_r120',\n",
+    "                'A7_M1__V4.5F2020_s_wHB_r60',\n",
+    "                'A8_M1__V4.5F5020_s_wHB_r60',\n",
+    "                'A9_M1__V4.5F5020_s_wHB_r120',\n",
+    "                'A10_M2__240926_V4.5F5030_s_wHB_r60_GMI',\n",
+    "                'A11_M1__V4.5F5040_s_wHB_r60',\n",
+    "                'A12_M1__V4.5F5040_s_wHB_r60_wavyFins',\n",
+    "                'A3_M1__V4.5NI_s_r60',\n",
+    "                'A4_M1__V4.5NI_s_wHB_r60',\n",
+    "                ]\n",
     "msh_h5_files"
    ]
   },
@@ -239,13 +284,13 @@
     "\n",
     "    bm.init_mesh(tui, Mesh_fp, S2S_fp, caoMeshName)\n",
     "\n",
-    "    hyp['fins_CFD'] = 1.\n",
+    "    # hyp['fins_CFD'] = 1.\n",
     "\n",
-    "    # if caoMeshCode in ['A3_M1', 'A4_M1']:\n",
-    "    #     hyp['fins_CFD'] = 0.\n",
-    "    # else:\n",
-    "    #     hyp['fins_CFD'] = 1.\n",
-    "    #     bm.adapt_for_fins(tui)\n",
+    "    if caoMeshCode in ['A3_M1', 'A4_M1']:\n",
+    "        hyp['fins_CFD'] = 0.\n",
+    "    else:\n",
+    "        hyp['fins_CFD'] = 1.\n",
+    "        # bm.adapt_for_fins(tui)\n",
     "\n",
     "    Inputs = (caoMeshCode, testConditionsCode, copy.deepcopy(panelSpecs), copy.deepcopy(hyp), copy.deepcopy(steadyStateConditions_dict), copy.deepcopy(Inputs_PyFluent))\n",
     "\n",
