--- a/CFD/files_manage.ipynb
+++ b/CFD/files_manage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +92,28 @@
     "                src_file = os.path.join(root, file)\n",
     "                dest_file = os.path.join(dest_dir, file)\n",
     "                shutil.copy2(src_file, dest_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_files_with_extension(source_dir, dest_dir, extension):\n",
+    "    # Walk through the source directory\n",
+    "    for root, dirs, files in os.walk(source_dir):\n",
+    "        for file in files:\n",
+    "            if file.endswith(extension):\n",
+    "                # Create the destination subfolder structure\n",
+    "                relative_path = os.path.relpath(root, source_dir)\n",
+    "                dest_subdir = os.path.join(dest_dir, relative_path)\n",
+    "                os.makedirs(dest_subdir, exist_ok=True)\n",
+    "                # Move the file to the destination directory\n",
+    "                source_file = os.path.join(root, file)\n",
+    "                dest_file = os.path.join(dest_subdir, file)\n",
+    "                shutil.move(source_file, dest_file)\n",
+    "                print(f\"Moved: {source_file} -> {dest_file}\")"
    ]
   },
   {
@@ -124,7 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msh_h5_files = [\n",
+    "                 'A5_M1__V4.5F2014_s_wHB_r60',\n",
+    "                 'A7_M1__V4.5F2020_s_wHB_r60',\n",
+    "                ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,17 +170,37 @@
     "\n",
     "    source_folder = os.path.join(r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\SimulationResults', str(caoMeshCode))\n",
     "    destination_folder = os.path.join(r'H:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel\\CFD\\Fluent_GMI\\SimulationResults', str(caoMeshCode))\n",
+    "    \n",
     "    exclusions = ['.cas.h5', '.dat.h5']\n",
-    "\n",
     "    copy_folder_with_exclusions(source_folder, destination_folder, exclusions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "source_folder = r'D:\\ANSYS Fluent Projects\\Hydraulics\\V4.5\\V4.5_1channel\\SimulationResults\\parametric_laminar_try0'\n",
+    "destination_folder = r'H:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-PL-model\\CFD\\V4.5_1channel_SR'\n",
+    "\n",
+    "exclusions = ['.cas.h5', '.dat.h5']\n",
+    "copy_folder_with_exclusions(source_folder, destination_folder, exclusions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage\n",
+    "source_folder = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests'\n",
+    "destination_folder = r'E:\\DualSun\\SEAGULL-3000\\Fluent_GMI\\tests'\n",
+    "\n",
+    "file_extension = '.h5'  # Change to the desired file extension\n",
+    "move_files_with_extension(source_folder, destination_folder, file_extension)"
+   ]
   },
   {
    "cell_type": "code",
