--- a/tests/test-heat-transfer.ipynb
+++ b/tests/test-heat-transfer.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialization\n",
     "\n",
     "%matplotlib notebook\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "\n",
     "import math\n",
     "from datetime import datetime\n",
@@ -79,15 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if x_c < longueur:\n",
     "    lam = integrate.quad(bht.Nu_forced_flat_plate_isoflux_lam,0,x_c,args=(lambd,speed,nu,Pr))[0]\n",
     "    turb = integrate.quad(bht.Nu_forced_flat_plate_isoflux_turb,x_c,longueur,args=(lambd,speed,nu,Pr))[0]\n",
@@ -128,36 +122,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dfu = pd.DataFrame(np.linspace(0.1,4.,10),columns=['u'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dfu['lam+turb'] = dfu.apply(lambda x : bht.h_top_forced(T_s,T_amb,x['u'],longueur),axis=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dfu['turb'] = dfu.apply(lambda x : bht.h_top_forced_turbulent(T_s,T_amb,x['u'],longueur),axis=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dfu['ratio'] = dfu['turb']/dfu['lam+turb']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
