last_update_Seagull_2024_S22

--- a/CFD/files_manage.ipynb
+++ b/CFD/files_manage.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
-    "import shutil"
+    "import shutil\n",
+    "\n",
+    "import paramiko\n",
+    "from scp import SCPClient\n",
+    "import posixpath"
    ]
   },
   {
@@ -200,6 +204,86 @@
     "\n",
     "file_extension = '.h5'  # Change to the desired file extension\n",
     "move_files_with_extension(source_folder, destination_folder, file_extension)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SSH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to establish an SSH connection\n",
+    "def create_ssh_client(hostname, port, username, password):\n",
+    "    ssh = paramiko.SSHClient()\n",
+    "    ssh.load_system_host_keys()\n",
+    "    ssh.set_missing_host_key_policy(paramiko.AutoAddPolicy())\n",
+    "    ssh.connect(hostname, port=port, username=username, password=password)\n",
+    "    return ssh\n",
+    "\n",
+    "# Recursive function to copy files and folders via SSH, excluding .h5 files\n",
+    "def copy_files_recursively(sftp, scp, remote_folder, local_folder):\n",
+    "    try:\n",
+    "        os.makedirs(local_folder, exist_ok=True)  # Create local folder if it doesn't exist\n",
+    "        items = sftp.listdir_attr(remote_folder)  # List directory contents\n",
+    "\n",
+    "        for item in items:\n",
+    "            remote_path = posixpath.join(remote_folder, item.filename)  # Ensure POSIX (Linux) path\n",
+    "            local_path = os.path.join(local_folder, item.filename)  # Windows path uses os.path.join\n",
+    "\n",
+    "            if item.st_mode & 0o40000:  # If it's a directory\n",
+    "                print(f\"Entering directory {remote_path}\")\n",
+    "                copy_files_recursively(sftp, scp, remote_path, local_path)\n",
+    "            else:  # If it's a file\n",
+    "                if not item.filename.endswith('.h5'):\n",
+    "                    print(f\"Copying file {remote_path} to {local_path}\")\n",
+    "                    scp.get(remote_path, local_path)\n",
+    "                else:\n",
+    "                    print(f\"Skipping file {remote_path} (excluded by extension)\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error while copying files: {e}\")\n",
+    "\n",
+    "# Main function to establish SSH connection and start file copy\n",
+    "def copy_files_via_ssh(hostname, port, username, password, remote_folder, local_folder):\n",
+    "    ssh = create_ssh_client(hostname, port, username, password)\n",
+    "    \n",
+    "    # Create SCP client\n",
+    "    with SCPClient(ssh.get_transport()) as scp:\n",
+    "        # Use SFTP to list files and directories on the remote directory\n",
+    "        sftp = ssh.open_sftp()\n",
+    "        try:\n",
+    "            copy_files_recursively(sftp, scp, remote_folder, local_folder)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error during file copy: {e}\")\n",
+    "        finally:\n",
+    "            sftp.close()\n",
+    "            ssh.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your SSH and folder details here\n",
+    "hostname = 'gnode03'\n",
+    "port = 22\n",
+    "username = 'delachaux'\n",
+    "password = 'finsonSPRING4?'  # Use SSH key for better security if possible\n",
+    "# remote_folder = '/usrtmp/delachaux/ANSYS Fluent Projects/Hydraulics/NUMAIRO_motif/SimulationResults/abaque1_laminar_try0'\n",
+    "remote_folder = '/usrtmp/delachaux/ANSYS Fluent Projects/Hydraulics/V4.5_1channel/SimulationResults/V4.5_1chMid_M1/parametric_laminar_try0'\n",
+    "local_folder = r'D:\\ANSYS Fluent Projects\\Hydraulics\\V4.5\\V4.5_1channel\\SimulationResults\\V4.5_1chMid_M1'\n",
+    "# local_folder = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\ANSYS Fluent Projects\\Hydraulics\\V4_motif\\SimulationResults\\V4.6_1MPE_M2\\abaque1_laminar_try0'\n",
+    "\n",
+    "# Start copying files, excluding those with .h5 extension\n",
+    "copy_files_via_ssh(hostname, port, username, password, remote_folder, local_folder)"
    ]
   },
   {
