--- a/CFD/ANSYS_Py_Bridge.ipynb
+++ b/CFD/ANSYS_Py_Bridge.ipynb
@@ -1829,7 +1829,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_py_ansys",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
