--- a/CFD/files_manage.ipynb
+++ b/CFD/files_manage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,11 @@
     "\n",
     "import paramiko\n",
     "from scp import SCPClient\n",
-    "import posixpath"
+    "import posixpath\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../../RD-systems-and-test-benches')\n",
+    "import utils.data_processing as dp"
    ]
   },
   {
@@ -283,7 +287,115 @@
     "# local_folder = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\ANSYS Fluent Projects\\Hydraulics\\V4_motif\\SimulationResults\\V4.6_1MPE_M2\\abaque1_laminar_try0'\n",
     "\n",
     "# Start copying files, excluding those with .h5 extension\n",
-    "copy_files_via_ssh(hostname, port, username, password, remote_folder, local_folder)"
+    "dp.copy_files_via_ssh(hostname, port, username, password, remote_folder, local_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import shutil\n",
+    "\n",
+    "import paramiko\n",
+    "from scp import SCPClient\n",
+    "import posixpath\n",
+    "import ntpath\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../../RD-systems-and-test-benches')\n",
+    "import utils.data_processing as dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your SSH and folder details here\n",
+    "hostname = '10.9.8.4'\n",
+    "port = 22\n",
+    "username = 'seagu'\n",
+    "password = 'Seagull_DS4'  # Use SSH key for better security if possible\n",
+    "# remote_folder = '/usrtmp/delachaux/ANSYS Fluent Projects/Hydraulics/NUMAIRO_motif/SimulationResults/abaque1_laminar_try0'\n",
+    "remote_folder = \"D:/ANSYS Fluent Projects/pvt_slice_outdoor/Fluent_GMI/SimulationResults\"\n",
+    "# remote_folder = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\SimulationResults'\n",
+    "local_folder = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel\\CFD\\Fluent_GMI\\SimulationResults'\n",
+    "# local_folder = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\ANSYS Fluent Projects\\Hydraulics\\V4_motif\\SimulationResults\\V4.6_1MPE_M2\\abaque1_laminar_try0'\n",
+    "\n",
+    "# Start copying files, excluding those with .h5 extension\n",
+    "# dp.copy_files_via_ssh(hostname, port, username, password, remote_folder, local_folder, remote_computer_os = 'Windows')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remote_file = '\"/D:/ANSYS Fluent Projects/pvt_slice_outdoor/Fluent_GMI/SimulationResults/A10_M2/tC0_bridge_try0_case1/all_ht_report_0.csv\"'\n",
+    "remote_file = r'\"D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\SimulationResults\\A10_M2\\tC0_bridge_try0_case1\\all_ht_report_0.csv\"'\n",
+    "# remote_file = remote_file.replace(' ', '\\\\ ') \n",
+    "local_folder = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel\\CFD\\Fluent_GMI\\SimulationResults'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remote_file = ntpath.normpath(remote_file)  # Normalize to Windows path format\n",
+    "local_folder = ntpath.normpath(local_folder)  # Normalize to Windows path format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remote_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remote_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssh = dp.create_ssh_client(hostname, port, username, password)\n",
+    "\n",
+    "scp = SCPClient(ssh.get_transport())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scp.get(remote_file, local_folder)"
    ]
   },
   {
@@ -296,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "model23",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
