--- a/CFD/test_bridge.ipynb
+++ b/CFD/test_bridge.ipynb
@@ -6,49 +6,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## IMPORTS\n",
+    "# ## IMPORTS\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "import time\n",
-    "import math\n",
-    "from datetime import datetime\n",
-    "from io import StringIO\n",
-    "\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.graph_objects as go\n",
-    "from numpy.polynomial.polynomial import Polynomial\n",
-    "import scipy.integrate as integrate\n",
-    "import scipy.optimize as sco\n",
-    "from scipy.optimize import minimize\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "import openpyxl\n",
-    "import networkx as nx\n",
-    "import sklearn.metrics\n",
-    "from IPython.core.display import HTML\n",
-    "import plotly.io as pio\n",
-    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
-    "import openpyxl as opxl\n",
-    "import matplotlib.ticker as mtick\n",
-    "from matplotlib.cm import get_cmap\n",
-    "import time\n",
+    "# import os\n",
+    "# import sys\n",
+    "# import time\n",
+    "# import math\n",
+    "# from datetime import datetime\n",
+    "# from io import StringIO\n",
     "\n",
     "\n",
-    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
-    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
-    "import jou_gen as jg\n",
-    "import ansys_py_bridge as apb\n",
-    "import ansys.fluent.core as pyfluent\n",
-    "# import model as ty\n",
-    "import proc as pr\n",
-    "import plot_functions_here as pfun\n",
-    "import heat_transfer as bht\n",
-    "import fluids as fds\n",
-    "import ht\n",
-    "import general as gen"
+    "# import numpy as np\n",
+    "# import pandas as pd\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import plotly.graph_objects as go\n",
+    "# from numpy.polynomial.polynomial import Polynomial\n",
+    "# import scipy.integrate as integrate\n",
+    "# import scipy.optimize as sco\n",
+    "# from scipy.optimize import minimize\n",
+    "# from sklearn.metrics import mean_squared_error\n",
+    "# import openpyxl\n",
+    "# import networkx as nx\n",
+    "# import sklearn.metrics\n",
+    "# from IPython.core.display import HTML\n",
+    "# import plotly.io as pio\n",
+    "# from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "# import openpyxl as opxl\n",
+    "# import matplotlib.ticker as mtick\n",
+    "# from matplotlib.cm import get_cmap\n",
+    "# import time\n",
+    "\n",
+    "\n",
+    "# sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
+    "# sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
+    "# import jou_gen as jg\n",
+    "# import ansys_py_bridge as apb\n",
+    "# import ansys.fluent.core as pyfluent\n",
+    "# # import model as ty\n",
+    "# import proc as pr\n",
+    "# import plot_functions_here as pfun\n",
+    "# import heat_transfer as bht\n",
+    "# import fluids as fds\n",
+    "# import ht\n",
+    "# import general as gen"
    ]
   },
   {
@@ -95,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SR_fp = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel\\CFD\\Fluent_GMI\\SimulationResults'\n",
+    "SR_fp = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\SimulationResults'\n",
     "caoMeshCode = 'A5_M1'\n",
     "testConditionsCode = 'tC0'\n",
     "method = 'bridge'\n",
-    "no_try =0\n",
-    "no_case = 0\n"
+    "no_try = 0\n",
+    "no_case = 0"
    ]
   },
   {
@@ -152,9 +152,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "caoMeshCode = 'A12_M1'\n",
+    "bplt.plot_1D_DeltaT_v2('Qdot_tube_fluid', SR_fp, caoMeshCode, testConditionsCode, method, no_try, [0,1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(23.61/1.95)\n",
+    "print(25.4/1.95)\n",
+    "print(25.64/1.95)\n",
+    "print(29.70/1.95) # A8\n",
+    "print(28.8/1.95) # A10_M2\n",
+    "print(28.7/1.95) # A11_M1\n",
+    "print(29.77/1.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(13.02-12.107) / 12.107"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "caoMeshCode_list = ['A3_M1','A4_M1','A5_M1', 'A7_M1', 'A8_M1']\n",
     "# no_case = 1\n",
-    "no_try = 1\n",
+    "no_try = 0\n",
     "for no_case in range(0, 3):\n",
     "    bplt.plot_1D_participation_stacked_last_it_multiple(SR_fp, caoMeshCode_list, testConditionsCode, method, no_try, no_case).show()"
    ]
@@ -319,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "model23",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
